fix styling for homepage

--- a/waste-less-client/src/components /PledgeForm/PledgeForm.scss
+++ b/waste-less-client/src/components /PledgeForm/PledgeForm.scss
@@ -2,6 +2,7 @@
     margin-left: 3rem;
     padding: 4rem;
     background-color: #B2D3BE;
+    border-radius: 6px;
 
     &__title {
         font-weight: 600;
