--- a/waste-less-client/src/pages/HomePage/HomePage.scss
+++ b/waste-less-client/src/pages/HomePage/HomePage.scss
@@ -23,7 +23,9 @@
 
     &__pledge-container {
         display: flex;
-        // justify-content: 
+        background-color: white;
+        border-radius: 6px;
         padding: 3rem;
+        margin-top: 3rem;
     }
 }
