--- a/waste-less-client/src/components /Header/Header.scss
+++ b/waste-less-client/src/components /Header/Header.scss
@@ -2,9 +2,17 @@
     // background-color: #89A3B2;
     &__logo {
         padding: 1rem;
-        height: 9rem;
+        height: 7rem;
     }
-    &__container {
+
+    &__navigation {
         display: flex;
+        justify-content: flex-end;  
+        margin-right: 4rem;    
+    }
+
+    &__nav-item {
+        margin-right: 3rem;
+        font-size: 1.25rem;
     }
 }
