use NavLink for links to other pages

--- a/waste-less-client/src/pages/HomePage/HomePage.scss
+++ b/waste-less-client/src/pages/HomePage/HomePage.scss
@@ -1,6 +1,6 @@
 .homepage {
     padding: 4rem 5rem 0rem 5rem;
-    background-color: #EEF0E5;
+    // background-color: #EEF0E5;
     height: 100vh;
     
     &__logo {
