--- a/waste-less-client/src/components /Header/Header.scss
+++ b/waste-less-client/src/components /Header/Header.scss
@@ -1,27 +1,31 @@
 .header {
-    &__logo {
-        padding: 1rem;
-        height: 7rem;
+  &__logo {
+    padding: 1rem;
+    margin-left: 1rem;
+    height: 7rem;
+  }
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__navigation {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 1rem;
+    list-style-type: none;
+  }
+
+  &__nav-item {
+    margin-right: 2.5rem;
+    padding: 0.5rem 1rem 3.2rem 1rem;
+    font-size: 1.25rem;
+    color: black;
+    text-decoration: none;
+    &:hover {
+        border-bottom: solid 2px black;
     }
-
-    &__navigation {
-        display: flex;
-        justify-content: flex-end;  
-        margin-right: 4rem;    
-    }
-
-    &__nav-item {
-        margin-right: 2.5rem;
-        font-size: 1.25rem;
-        color: black;
-        &:hover {
-            background-color: rgba(178, 211, 190, 0.3);
-            border-radius: 20px;
-            
-        }
-      
-       
-    }
-
-
+  }
 }
