--- a/waste-less-client/src/components /Header/Header.scss
+++ b/waste-less-client/src/components /Header/Header.scss
@@ -27,5 +27,13 @@
     &:hover {
         border-bottom: solid 2px black;
     }
+    &.active {
+        background-color: rgba(211, 211, 211, 0.25);
+        border-radius: 20px;
+        padding-bottom: 0.5rem;
+        &:hover {
+            border-bottom: none;
+        }
+    }
   }
 }
