--- a/waste-less-client/src/components /WasteItemsList/WasteItemsList.scss
+++ b/waste-less-client/src/components /WasteItemsList/WasteItemsList.scss
@@ -1,6 +1,59 @@
+@import "../../styles/variables.scss";
 .waste-log {
-    &__icon {
-        height: 1.25rem;
-        cursor: pointer;
+    &__card {
+        border: none;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        transition: box-shadow 0.3s ease; 
+        &:hover {
+            box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2); 
+        }
     }
+  &__title {
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+
+  &__subtitle {
+    text-transform: uppercase;
+    font-weight: 900;
+    color: $DarkGreen;
+  }
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 1rem;
+  }
+
+  &__category {
+    text-transform: uppercase;
+    margin-left: 1rem;
+    font-weight: 700;
+  }
+
+  &__quantity {
+    @extend .waste-log__category;
+  }
+
+  &__category-container {
+    display: flex;
+    margin-top: 0.5rem;
+  }
+
+  &__quantity-container {
+    display: flex;
+  }
+  &__icon {
+    height: 1.25rem;
+    cursor: pointer;
+
+    &-container {
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
+
+  &__category-icon {
+    height: 2.5rem;
+  }
 }
