start tooltip for definitions

--- a/waste-less-client/src/pages/WasteLog/WasteLog.scss
+++ b/waste-less-client/src/pages/WasteLog/WasteLog.scss
@@ -14,6 +14,12 @@
 
     &__subtitle {
         @include page-subtitle;
+        margin-bottom: 0;
+        &--second {
+            @include page-subtitle;
+        
+        }
+
     }
 
     &__button {
