--- a/waste-less-client/src/components /WasteItemsList/WasteItemsList.scss
+++ b/waste-less-client/src/components /WasteItemsList/WasteItemsList.scss
@@ -12,6 +12,10 @@
   &__title {
     font-size: 1.5rem;
     font-weight: 600;
+    cursor: pointer;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   &__subtitle {
