--- a/waste-less-client/src/components /PledgeFormModal/PledgeForm.scss
+++ b/waste-less-client/src/components /PledgeFormModal/PledgeForm.scss
@@ -3,9 +3,21 @@
 .modal {
   &__header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
     font-size: 2rem;
     height: 2.5rem;
+
+    &-container {
+      display: flex;
+      align-items: center;
+      padding-bottom: 1rem;
+    }
+  }
+
+  &__icon {
+    height: 5rem;
+    margin-right: 1rem;
   }
   &__pledge-form {
     @include modal-background;
@@ -18,6 +30,7 @@
     &__title {
       font-weight: 600;
       text-transform: uppercase;
+      margin-top: 1rem;
     }
     &__input {
       padding-right: 10rem;
@@ -29,6 +42,13 @@
         @include button-cancel;
       }
     }
+  }
+
+  &__content {
+    margin-top: 1rem;
+  }
+  &__close {
+    cursor: pointer;
   }
 
   &__footer {
