display success message when user profile added

--- a/waste-less-client/src/components /C02Emissions/C02Emissions.scss
+++ b/waste-less-client/src/components /C02Emissions/C02Emissions.scss
@@ -2,14 +2,17 @@
 .carbon {
     &__title{
         font-weight: 600;
-        font-size: 1rem;
+        font-size: 1.5rem;
+        width: 20%;
     }
     &__container {
         border-radius: 6px;
         background-color: white;
-        padding: 1rem;
+        padding: 0.5rem;
         border-radius: 10px;
         background-color: $Light-Green;
+        width: fit-content;
+
     }
 
     &__number {
