--- a/waste-less-client/src/components /PledgeFormModal/PledgeForm.scss
+++ b/waste-less-client/src/components /PledgeFormModal/PledgeForm.scss
@@ -55,4 +55,13 @@
     display: flex;
     justify-content: space-between;
   }
+
+  &__success {
+    font-weight: 600;
+    margin-top: 1rem;
+  }
+
+  &__link {
+   margin-bottom: 0;
+  }
 }
