--- a/waste-less-client/src/components /AddWasteItem/AddWasteItem.scss
+++ b/waste-less-client/src/components /AddWasteItem/AddWasteItem.scss
@@ -9,11 +9,29 @@
     &__container{
         @include modal;
         padding-top: 1rem;
+
+        &-header {
+            display: flex;
+            justify-content: flex-end;
+        }
+    }
+
+    &__close {
+        cursor: pointer;
+    }
+
+    &__planet {
+        height: 4rem;
+    }
+
+    &__image-container {
+        display: flex;
+        justify-content: center;
+
     }
 
     &__title {
         font-weight: 900;
-        text-transform: uppercase;
         display: flex;
         justify-content: center;
         color: $DarkGreen;
