--- a/waste-less-client/src/pages/ProfilePage/ProfilePage.scss
+++ b/waste-less-client/src/pages/ProfilePage/ProfilePage.scss
@@ -16,6 +16,11 @@
         padding-top: 1rem;
     }
 
+    &__carbon-data {
+        padding-left: 3rem;
+        padding-top: 1rem;
+    }
+
     &__waste-data {
         margin-left: 1rem;
     }
