--- a/waste-less-client/src/components /DisplayRecipe/DisplayRecipe.scss
+++ b/waste-less-client/src/components /DisplayRecipe/DisplayRecipe.scss
@@ -18,6 +18,10 @@
     border-radius: 6px;
   }
 
+  &__ingredients {
+    width: 25%;
+  }
+
   &__name {
     font-size: 2rem;
     font-weight: 600;
