--- a/waste-less-client/src/pages/HomePage/HomePage.scss
+++ b/waste-less-client/src/pages/HomePage/HomePage.scss
@@ -6,12 +6,13 @@
     background-color: rgba(137, 163, 178, 0.5);
     background-position: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
 
     &-text {
-      margin-left: 2rem;
+      margin-left: 4rem;
       margin-right: 1rem;
+      width: 50%;
     }
   }
 
