--- a/waste-less-client/src/components /WasteTips/WasteTips.scss
+++ b/waste-less-client/src/components /WasteTips/WasteTips.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables.scss";
+@import "../../styles/mixins.scss";
 .tips {
     &__title {
         font-weight: 600;
@@ -23,5 +24,10 @@
         background-color: white;
         margin: 0;
         font-weight: 600;
+    }
+
+    &__btn {
+        @include button-submit;
+        color: white;
     }
 }
