--- a/waste-less-client/src/pages/ProfilePage/ProfilePage.scss
+++ b/waste-less-client/src/pages/ProfilePage/ProfilePage.scss
@@ -24,4 +24,9 @@
     &__waste-data {
         margin-left: 1rem;
     }
+
+    &__waste-tips {
+        margin-left: 3rem;
+        padding-top: 1rem;
+    }
 }
