--- a/waste-less-client/src/components /WasteTips/WasteTips.scss
+++ b/waste-less-client/src/components /WasteTips/WasteTips.scss
@@ -12,7 +12,6 @@
         padding: 0.5rem;
         border-radius: 10px;
         background-color: $Light-Green;
-        width: fit-content; 
     }
     &__icon {
         height: 2rem;
@@ -24,10 +23,17 @@
         background-color: white;
         margin: 0;
         font-weight: 600;
+        min-width: 60%;
     }
 
     &__btn {
         @include button-submit;
-        color: white;
+        background-color: $Light-Green;
+
+        &-container {
+            display: flex;
+            justify-content: flex-end;
+            padding-bottom: 0.5rem;
+        }
     }
 }
