--- a/waste-less-client/src/pages/ProfilePage/ProfilePage.scss
+++ b/waste-less-client/src/pages/ProfilePage/ProfilePage.scss
@@ -8,12 +8,23 @@
     &__title {
         @include page-title;
     }
+
+    &__container {
+        display: flex;
+        justify-content: space-between;
+        margin-right: 3rem;
+        padding-top: 1rem;
+    }
     &__data {
         display: flex;
         justify-content: flex-start;
         margin-right: 2rem;
         padding-left: 3rem;
         padding-top: 1rem;
+    }
+
+    &__waste-tips {
+        min-width: 60%;
     }
 
     &__carbon-data {
@@ -25,8 +36,5 @@
         margin-left: 1rem;
     }
 
-    &__waste-tips {
-        margin-left: 3rem;
-        padding-top: 1rem;
-    }
+   
 }
