style login modal to match sign up

--- a/waste-less-client/src/pages/WasteLog/WasteLog.scss
+++ b/waste-less-client/src/pages/WasteLog/WasteLog.scss
@@ -3,7 +3,7 @@
 .waste-page {
     background-color: rgba(195,208,217, 0.1);
     padding: 2rem;
-    height: 100vh;
+    height: fit-content;
 }
 
 .waste-header{
