--- a/waste-less-client/src/components /DisplayRecipe/DisplayRecipe.scss
+++ b/waste-less-client/src/components /DisplayRecipe/DisplayRecipe.scss
@@ -13,6 +13,12 @@
     margin-left: 3rem;
   }
 
+  &__message {
+    margin: 1rem 3rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+
   &__img {
     height: 30rem;
     border-radius: 6px;
