--- a/waste-less-client/src/components /LoginModal/Login.scss
+++ b/waste-less-client/src/components /LoginModal/Login.scss
@@ -7,12 +7,36 @@
     &__container {
         width: 60%;
     }
+
+    &__close {
+        cursor: pointer;
+    }
+
+    &__title {
+        font-weight: 600;
+        margin-top: 1rem;
+        padding-left: 1rem;
+    }
     &__header {
         display: flex;
         justify-content: space-between;
         align-items: center;
         font-size: 2rem;
         height: 2.5rem;
+        margin-bottom: 1rem;
+
+        &-container {
+            display: flex;
+
+        }
+    }
+
+    &__input {
+       margin: 0.5rem 0;
+    }
+
+    &__icon {
+        height: 4rem;
     }
 
     &__btn {
