style profile dashboard

--- a/waste-less-client/src/styles/_mixins.scss
+++ b/waste-less-client/src/styles/_mixins.scss
@@ -43,7 +43,7 @@
 //page layout 
 @mixin page-style {
     background-color: rgba(195,208,217, 0.1);
-    padding: 2rem;
+    padding: 2rem 5rem;
     height: 100vh;
 }
 
