--- a/waste-less-client/src/components /DisplayUserData/DisplayUserData.scss
+++ b/waste-less-client/src/components /DisplayUserData/DisplayUserData.scss
@@ -1,26 +1,26 @@
 @import "../../styles/variables.scss";
 .user-data {
-    padding-left: 3rem;
-    &__title {
-        font-weight: 600;
-        font-size: 1.5rem;
-    }
-    &__container {
-        border-radius: 6px;
-        background-color: white;
-        padding: 0.5rem;
-        border-radius: 10px;
-        background-color: $Light-Green;
-        width: 100%;
-    }
+  padding-left: 3rem;
+  &__title {
+    font-weight: 600;
+    font-size: 1.5rem;
+  }
+  &__container {
+    border-radius: 6px;
+    background-color: white;
+    padding: 0.5rem;
+    border-radius: 10px;
+    background-color: $Light-Green;
+    max-width: 80%;
+  }
 
-    &__reason {
-        background-color: white;
-        padding: 1rem;
-    
+  &__reason {
+    background-color: white;
+    padding: 1rem;
 
-        &-text {
-            margin-bottom: 0;
-        }
+    &-text {
+      margin-bottom: 0;
+      font-size: 1.35rem;
     }
+  }
 }
