--- a/waste-less-client/src/pages/HomePage/HomePage.scss
+++ b/waste-less-client/src/pages/HomePage/HomePage.scss
@@ -1,13 +1,16 @@
 .homepage {
   height: 100vh;
+  
 
   &__hero-container {
     height: 700px;
+    max-height: 700px;
     background-color: rgba(137, 163, 178, 0.5);
     background-position: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: fit-content;
 
     &-text {
       margin-left: 4rem;
@@ -19,6 +22,7 @@
   &__hero-title {
     font-weight: 900;
     font-size: 4.5rem;
+    max-height: 700px;
   }
 
   &__hero-text {
